ipad header alignment issue

--- a/css/hpit.css
+++ b/css/hpit.css
@@ -2220,6 +2220,9 @@ img {
 	.container > .navbar-collapse {
 		float: right;
 	}
+	.navbar-default .navbar-nav > li > a {
+		white-space: nowrap;
+	}
 	#controls,
 	.whiteAngle,
 	.blackAngle,
